fix text-align in panel body

--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -9,5 +9,5 @@
 }
 
 .panel-body, .panel-title {
-  text-align: left;
+  text-align: center;
 }
